--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<p>
 			<label for="html">Inquadramento:</label>
 			<select name="inquadramento" id="inquadramento">
-				<option value="altro">Area Minori</option>
+				<option value="altro">Aree Minori alle successive</option>
 				<option value="4">III area professionale, 4° livello retributivo</option>
 				<option value="quadro">Quadro</option>
 			</select>
